added java to PATH

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,7 +70,7 @@ bind n next-window
 
 # title A
 unbind A
-bind A command-prompt "rename-window %%"
+bind A command-prompt "rename %%"
 
 # other ^A
 unbind ^A
