added claspath of comp171 src/ dir

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,17 +15,13 @@ set-window-option -g window-status-current-fg magenta
 set-option -g set-titles off
 setw -g aggressive-resize off
 setw -g monitor-activity off
-set-option status-right '%k:%M #[fg=white]%m/%d'
+set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
-new -d -s0 -nmail 'exec mutt' #screen 0:0
-neww -d 'exec bash' #screen 0:1
-neww -d 'exec bash' #screen 0:2
-neww -d 'exec bash' #screen 0:3
-neww -d 'exec bash' #screen 0:4
-neww -d -nsyslog 'exec inotail -f -n 30 /var/log/everything.log' #screen 0:5
-neww -d -nirssi 'exec irssi' #screen 0:6
-neww -d -nrtorrent 'exec rtorrent' #screen 0:7
+new -d -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
+neww -d -nmail 'exec mutt' #screen 0:2
+neww -d -nirssi 'exec irssi' #screen 0:3
+neww -d -ncode 'exec bash' #screen 0:4
 
 set-window-option -t0:0 monitor-activity on
 
