--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,10 +18,14 @@ setw -g monitor-activity off
 set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
-new -d -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
+new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
+neww -d 'exec bash' #screen 0:4
 neww -d -nmail 'exec mutt' #screen 0:2
 neww -d -nirssi 'exec irssi' #screen 0:3
-neww -d -ncode 'exec bash' #screen 0:4
+
+
+
+
 
 set-window-option -t0:0 monitor-activity on
 
