using htop instead of top in default tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
 new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
-neww -d -ntop 'exec top' #screen 0:4
+neww -d -nhtop 'exec htop' #screen 0:4
 neww -d -nirssi 'exec irssi' #screen 0:3
 neww -d -ncodez 'exec bash' #screen 0:4
 neww -d -nmail 'exec mutt' #screen 0:2
