--- a/.offlineimaprc
+++ b/.offlineimaprc
@@ -22,9 +22,10 @@ remoteuser = jzacsh@gmail.com
 realdelete = no
 #remotepass = password #in ~/.netrc
 nametrans = lambda foldername: re.sub ('^\[gmail\]', 'gmail',
+                               re.sub ('all', 'all',
                                re.sub ('sent_mail', 'sent',
                                re.sub ('starred', 'flagged',
-                               re.sub (' ', '_', foldername.lower()))))
+                               re.sub (' ', '_', foldername.lower())))))
 #folderfilter = lambda foldername: foldername not in '[Gmail]/All Mail'
 folderfilter = lambda foldername: foldername in '[Gmail]/All Mail'
 
