--- a/.offlineimaprc
+++ b/.offlineimaprc
@@ -14,7 +14,7 @@ quick = 10
 
 [Repository gmail-local]
 type = Maildir
-localfolders = ~/mail/
+localfolders = ~/mail/gmail
 
 [Repository gmail-remote]
 type = Gmail
@@ -22,10 +22,12 @@ remoteuser = jzacsh@gmail.com
 realdelete = no
 #remotepass = password #in ~/.netrc
 nametrans = lambda foldername: re.sub ('^\[gmail\]', 'gmail',
-                               re.sub ('all', 'all',
-                               re.sub ('sent_mail', 'sent',
-                               re.sub ('starred', 'flagged',
-                               re.sub (' ', '_', foldername.lower())))))
+                               re.sub ('.*All Mail$', 'archive',
+                               re.sub ('.*Sent Mail$', 'sent',
+                               re.sub ('.*Drafts$', 'drafts',
+                               re.sub ('.*Spam$', 'spam',
+                               re.sub ('.*Starred$', 'flagged',
+                               re.sub (' ', '_', foldername.lower())))))))
 #folderfilter = lambda foldername: foldername not in '[Gmail]/All Mail'
 folderfilter = lambda foldername: foldername in '[Gmail]/All Mail'
 
