--- a/.offlineimaprc
+++ b/.offlineimaprc
@@ -21,7 +21,7 @@ type = Gmail
 remoteuser = jzacsh@gmail.com
 realdelete = no
 #remotepass = password #in ~/.netrc
-nametrans = lambda foldername: re.sub ('^\[gmail\]', 'gmail',
+nametrans = lambda folder: re.sub ('^\[gmail\]', 'gmail',
                                re.sub ('.*All Mail$', 'archive',
                                re.sub ('.*Sent Mail$', 'sent',
                                re.sub ('.*Drafts$', 'drafts',
