--- a/.offlineimaprc
+++ b/.offlineimaprc
@@ -22,13 +22,40 @@ remoteuser = jzacsh@gmail.com
 realdelete = no
 #remotepass = password #in ~/.netrc
 nametrans = lambda foldername: re.sub('.*All Mail$', 'archive',
+                               re.sub('.*INBOX$', 'inbox',
+                               re.sub('.*Forums$', 'forums',
+                               re.sub('.*DEV$', 'dev',
+                               re.sub('.*fincur$', 'dev',
+                               re.sub('.*Family$', 'family',
+                               re.sub('.*Trash$', 'trash',
+                               re.sub('.*oDesk$', 'work',
+                               re.sub('.*EMS.*$', 'ems',
+                               re.sub('.*Business Work$', 'work',
+                               re.sub('.*housing$', 'rent',
+                               re.sub('.*Mobile$', 'mobile',
+                               re.sub('.*GnuCash$', 'gnucash',
+                               re.sub('.*LEGAL$', 'legal',
+                               re.sub('.*dev_zagat$', 'zagat',
+                               re.sub('.*dev_.*$', 'freelance',
+                               re.sub('.*Finances$', 'finance',
+                               re.sub('.*School Shit$', 'school',
+                               re.sub('.*Lover Bri$', 'bri',
+                               re.sub('.*lug_shore$', 'lug',
+                               re.sub('.*LUG$', 'lug',
+                               re.sub('.*Notes$', 'notes',
+                               re.sub('.*@jzacsh\.com$', 'jzacsh_com',
+                               re.sub('.*Notifications$', 'signedup',
+                               re.sub('.*Registration$', 'registered',
+                               re.sub('.*Vacate Pla.*$', 'vacation',
+                               re.sub('.*Politics$', 'politic',
+                               re.sub('.*Help - Info$', 'help',
                                re.sub('.*Sent Mail$', 'sent',
                                re.sub('.*Drafts$', 'drafts',
                                re.sub('.*Spam$', 'spam',
-                               re.sub('.*Starred$', 'flagged',
-                               re.sub(' ', '_', foldername.lower()))))))
-#folderfilter = lambda foldername: foldername not in '[Gmail]/All Mail'
-folderfilter = lambda foldername: foldername in '[Gmail]/All Mail'
+                               re.sub('.*Starred$', 'flagged', 
+                                 foldername))))))))))))))))))))))))))))))))
+#folderfilter = lambda foldername: foldername not in ['[Gmail]/All Mail']
+#folderfilter = lambda foldername: foldername in ['[Gmail]/All Mail']
 
 # [mbnames]
 # enabled = yes
