--- a/.gitconfig
+++ b/.gitconfig
@@ -2,12 +2,14 @@
   name = Jonathan Zacsh
   email = jzacsh@gmail.com
 [help]
-	autocorrect = 1
+  autocorrect = 1
 [alias]
   co = checkout
   br = branch
   ci = commit
   st = status
+  l  = pull
+  p  = push
   unstage = reset HEAD --
   last = log -1 HEAD
 [core]
@@ -38,3 +40,4 @@
   added = yellow
   changed = green
   untracked = cyan
+
