attempting to fix eror message about logrotate syntax.

--- a/logrotate.conf
+++ b/logrotate.conf
@@ -12,7 +12,7 @@ rotate 4
 create
 
 # uncomment this if you want your log files compressed
-#compress
+compress
 
 # Logs are moved into directory for rotation
 olddir /home/jzacsh/var/log/archive
@@ -26,10 +26,11 @@ include /etc/logrotate.d
 /home/jzacsh/var/log/* {
     daily
     rotate 5
-    compress
 }
 
 # continuous integration scripts
 /home/jzacsh/var/log/int-build-* {
+    daily
+    rotate 5
     maxage 15
 }
