awesome "copytruncate" declaration for logrotate to clear a log to zero before rotating it.

--- a/logrotate.conf
+++ b/logrotate.conf
@@ -24,6 +24,7 @@ tabooext + .pacorig .pacnew .pacsave
 include /etc/logrotate.d
 
 /home/jzacsh/var/log/* {
+    copytruncate
     daily
     rotate 5
 }
