adjustments to take new repository workflow into consideration

--- a/.hgrc
+++ b/.hgrc
@@ -42,8 +42,8 @@ cmd.cdiff = colordiff
 opts.cdiff = -uprN
 
 [paths]
-int = http://codelibrary.zagat.com/hg/integration/web5-integration/
-jz = http://codelibrary.zagat.com/hg/integration/web5-jzacsh/
+jz_stable = http://codelibrary.zagat.com/hg/integration/web5-jzacsh/
+jz_edge = http://codelibrary.zagat.com/hg/qa2/web5-jzacsh-qa2/
 qa = http://codelibrary.zagat.com/hg/qa/web5-qa/
 prod = http://codelibrary.zagat.com/hg/prod/web5-prod/
 
