local laptop's conf adjusted for new env. (no longer on arch).

--- a/.hgrc
+++ b/.hgrc
@@ -17,7 +17,7 @@ hgext.pager=
 hgext.highlight=
 hgext.progress=
 # hgext.inotify=
-hgext.hgshelve=
+# hgext.hgshelve=
 hgext.graphlog=
 hgext.eol =
 hgext.record =
