--- a/.host/src/host.jzcl/.tmux.conf
+++ b/.host/src/host.jzcl/.tmux.conf
@@ -18,9 +18,9 @@ setw -g monitor-activity off
 set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
-new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
-neww -d -nhtop 'exec htop' #screen 0:4
-neww -d -nstat 'exec yacpi' #screen 0:3
+new  -d -s0 -nlogs 'exec ~/bin/share/logz' #screen 0:1
+neww -d -nhtop 'exec sudo htop' #screen 0:4
+neww -d -nirc 'exec irssi' #screen 0:3
 
 
 
