--- a/.hgrc
+++ b/.hgrc
@@ -17,7 +17,7 @@ hgext.pager=
 hgext.highlight=
 hgext.progress=
 # hgext.inotify=
-# hgext.hgshelve=
+hgext.hgshelve= ~/usr/lib/mercurial/hgshelve.py
 hgext.graphlog=
 hgext.eol =
 hgext.record =
