--- a/.hgrc
+++ b/.hgrc
@@ -45,7 +45,7 @@ opts.cdiff = -uprN
 [paths]
 jz_stable = http://codelibrary.zagat.com/hg/integration/web5-jzacsh/
 jz_edge = http://codelibrary.zagat.com/hg/qa2/web5-jzacsh-qa2/
-qa = http://codelibrary.zagat.com/hg/qa/web5-qa/
+edge = http://codelibrary.zagat.com/hg/qa2/web5-qa2/
 prod = http://codelibrary.zagat.com/hg/prod/web5-prod/
 int = http://codelibrary.zagat.com/hg/integration/web5-integration/
 
