--- a/.host/src/host.cnyitjza/.tmux.conf
+++ b/.host/src/host.cnyitjza/.tmux.conf
@@ -24,11 +24,8 @@ neww -d -nirssi 'exec irssi' #screen 0:3
 neww -d -ncodez 'exec bash' #screen 0:4
 neww -d -nmail 'exec mutt' #screen 0:2
 
-
-
-
-
-set-window-option -t0:0 monitor-activity on
+#~/bin/share/logz shows too much
+# set-window-option -t0:0 monitor-activity on
 
 #---------------------------------------------------------
 # a whole lot of crap to make tmux feel more like screen |
