/var/log/everything.log should be used for arch boxes.

--- a/.host/src/host.jzcl/.tmux.conf
+++ b/.host/src/host.jzcl/.tmux.conf
@@ -18,12 +18,11 @@ setw -g monitor-activity off
 set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
-new  -d -s0 -nlogs '~/bin/share/logz' #screen 0:1
-neww -d -nhtop 'exec sudo htop' #screen 0:2
+new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
+neww -d -nhtop 'exec htop' #screen 0:2
 neww -d -ncodez 'exec bash' #screen 0:3
 
-#~/bin/share/logz shows too much
-# set-window-option -t0:0 monitor-activity on
+set-window-option -t0:0 monitor-activity on
 
 #---------------------------------------------------------
 # a whole lot of crap to make tmux feel more like screen |
