--- a/.host/src/host.jzcl/.tmux.conf
+++ b/.host/src/host.jzcl/.tmux.conf
@@ -20,7 +20,7 @@ set-option status-right '%k:%M #[fg=white]%m/%D'
 # Establish initial session
 new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
 neww -d -nhtop 'exec sudo htop' #screen 0:2
-neww -d -nhtop 'exec yacpi' #screen 0:3
+neww -d -nyacpi 'exec yacpi' #screen 0:3
 neww -d -ncodez 'exec bash' #screen 0:4
 
 set-window-option -t0:0 monitor-activity on
