taken updated tmux conf from someone who actually keeps their's up to date.

--- a/.host/src/host.jzcl/.tmux.conf
+++ b/.host/src/host.jzcl/.tmux.conf
@@ -1,21 +1,17 @@
-### Unbind existing tmux key bindings (except 0-9).
-
-set-option -g default-terminal screen-256color
-set -g visual-activity off
-
-set-window-option -g mode-keys vi # vi key
-set-option -g status-keys vi
-
 # Global parameters
-set -g status-bg black
-set -g status-fg cyan
-set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg magenta
-set-option -g set-titles off
-setw -g aggressive-resize off
-setw -g monitor-activity off
-set-option status-right '%k:%M #[fg=white]%m/%D'
+set                  -g status-bg black
+set                  -g status-fg cyan
+set                  -g visual-activity off
+setw                 -g aggressive-resize off
+setw                 -g monitor-activity off
+set-window-option    -g mode-keys vi # vi key
+set-window-option    -g window-status-current-attr bright
+set-window-option    -g window-status-current-bg black
+set-window-option    -g window-status-current-fg magenta
+set-option           -g set-titles off
+set-option           -g default-terminal screen-256color
+set-option           -g status-keys vi
+set-option           status-right '%k:%M #[fg=white]%m/%d'
 
 # Establish initial session
 new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
@@ -25,15 +21,12 @@ neww -d -ncodez 'exec bash' #screen 0:4
 
 set-window-option -t0:0 monitor-activity on
 
-#---------------------------------------------------------
-# a whole lot of crap to make tmux feel more like screen |
-#---------------------------------------------------------
+# Keybindings (screenlike)
 # Set the prefix to ^A.
 unbind C-b
 set -g prefix ^A
 bind a send-prefix
 
-# Bind appropriate commands similar to screen.
 # lockscreen ^X x 
 unbind ^X
 bind ^X lock-server
@@ -43,7 +36,7 @@ bind x lock-server
 # screen ^C c 
 unbind ^C
 bind ^C new-window
-bind c
+unbind c
 bind c new-window
 
 # detach ^D d
@@ -66,7 +59,7 @@ bind n next-window
 
 # title A
 unbind A
-bind A command-prompt "rename %%"
+bind A command-prompt "rename-window %%"
 
 # other ^A
 unbind ^A
@@ -112,3 +105,8 @@ bind _ split-window -v
 unbind '"'
 bind '"' choose-window
 
+# split pane selection
+unbind Left
+bind h select-pane -L
+unbind Right
+bind l select-pane -R
