--- a/.host/src/distro.ubuntu/.tmux.conf
+++ b/.host/src/distro.ubuntu/.tmux.conf
@@ -19,7 +19,7 @@ set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
 #new  -d -s0 -nlogs '~/bin/share/logz' #screen 0:1
-new  -d -s0 -nlogs 'tail -f /var/log/auth.log /var/log/ufw.log' #screen 0:1
+new  -d -s0 -nlogs 'tail -f -n 30 /var/log/syslog /var/log/ufw.log' #screen 0:1
 neww -d -nhtop 'exec sudo htop' #screen 0:2
 neww -d -nirssi 'exec irssi' #screen 0:3
 neww -d -ncodez 'exec bash' #screen 0:4
