moved physical copy of vimspell plugin to git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/bundle/vimroom"]
 	path = .vim/bundle/vimroom
 	url = git://github.com/mikewest/vimroom.git
+[submodule ".vim/bundle/vimspell"]
+	path = .vim/bundle/vimspell
+	url = git://github.com/vim-scripts/vimspell.git
