moved physical copy of vcscommand plugin to git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/bundle/vimspell"]
 	path = .vim/bundle/vimspell
 	url = git://github.com/vim-scripts/vimspell.git
+[submodule ".vim/bundle/vcscommand"]
+	path = .vim/bundle/vcscommand
+	url = git://repo.or.cz/vcscommand.git
