--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule ".vim/bundle/rvm"]
 	path = .vim/bundle/rvm
 	url = git://github.com/vim-scripts/rvm.vim
+[submodule ".vim/bundle/taglist"]
+	path = .vim/bundle/taglist
+	url = git://github.com/vim-scripts/taglist.vim.git
+[submodule ".vim/bundle/taglist-plus"]
+	path = .vim/bundle/taglist-plus
+	url = git://github.com/int3/vim-taglist-plus.git
