--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule ".vim/bundle/mru"]
 	path = .vim/bundle/mru
 	url = git://github.com/vim-scripts/mru.vim.git
+[submodule ".vim/bundle/ack"]
+	path = .vim/bundle/ack
+	url = git://github.com/vim-scripts/ack.vim.git
