moved physical copy of FuzzyFinder plugin to git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/bundle/codepad"]
 	path = vim/bundle/codepad
 	url = git://github.com/vim-scripts/codepad.git
+[submodule "vim/bundle/FuzzyFinder"]
+	path = vim/bundle/FuzzyFinder
+	url = git://github.com/vim-scripts/FuzzyFinder.git
