--- a/.gitmodules
+++ b/.gitmodules
@@ -37,38 +37,38 @@
 [submodule ".vim/bundle/Gundo"]
 	path = .vim/bundle/Gundo
 	url = git://github.com/vim-scripts/Gundo.git
-[submodule "vim/bundle/IndentConsistencyCop"]
-	path = vim/bundle/IndentConsistencyCop
+[submodule ".vim/bundle/IndentConsistencyCop"]
+	path = .vim/bundle/IndentConsistencyCop
 	url = git://github.com/vim-scripts/IndentConsistencyCop.git
-[submodule "vim/bundle/capslock"]
-	path = vim/bundle/capslock
+[submodule ".vim/bundle/capslock"]
+	path = .vim/bundle/capslock
 	url = git://github.com/vim-scripts/capslock.vim.git
-[submodule "vim/bundle/debugger.py"]
-	path = vim/bundle/debugger.py
+[submodule ".vim/bundle/debugger.py"]
+	path = .vim/bundle/debugger.py
 	url = git://github.com/vim-scripts/debugger.py.git
-[submodule "vim/bundle/codepad"]
-	path = vim/bundle/codepad
+[submodule ".vim/bundle/codepad"]
+	path = .vim/bundle/codepad
 	url = git://github.com/vim-scripts/codepad.git
-[submodule "vim/bundle/FuzzyFinder"]
-	path = vim/bundle/FuzzyFinder
+[submodule ".vim/bundle/FuzzyFinder"]
+	path = .vim/bundle/FuzzyFinder
 	url = git://github.com/vim-scripts/FuzzyFinder.git
-[submodule "vim/bundle/Command-T"]
-	path = vim/bundle/Command-T
+[submodule ".vim/bundle/Command-T"]
+	path = .vim/bundle/Command-T
 	url = git://github.com/vim-scripts/Command-T.git
-[submodule "vim/bundle/cscope_macros"]
-	path = vim/bundle/cscope_macros
+[submodule ".vim/bundle/cscope_macros"]
+	path = .vim/bundle/cscope_macros
 	url = git://github.com/vim-scripts/cscope_macros.vim.git
-[submodule "vim/bundle/phpcomplete"]
-	path = vim/bundle/phpcomplete
+[submodule ".vim/bundle/phpcomplete"]
+	path = .vim/bundle/phpcomplete
 	url = git://github.com/vim-scripts/phpcomplete.vim.git
-[submodule "vim/bundle/Sass"]
-	path = vim/bundle/Sass
+[submodule ".vim/bundle/Sass"]
+	path = .vim/bundle/Sass
 	url = git://github.com/vim-scripts/Sass.git
-[submodule "vim/bundle/dante"]
-	path = vim/bundle/dante
+[submodule ".vim/bundle/dante"]
+	path = .vim/bundle/dante
 	url = git://github.com/vim-scripts/dante.vim.git
-[submodule "vim/bundle/Mustang2"]
-	path = vim/bundle/Mustang2
+[submodule ".vim/bundle/Mustang2"]
+	path = .vim/bundle/Mustang2
 	url = git://github.com/vim-scripts/Mustang2.git
 [submodule ".vim/bundle/hornet"]
 	path = .vim/bundle/hornet
