yay! no more dependency on bash loginShell!

--- a/.host/src/distro.ubuntu/.tmux.conf
+++ b/.host/src/distro.ubuntu/.tmux.conf
@@ -1,5 +1,8 @@
 ### Unbind existing tmux key bindings (except 0-9).
 
+# do not need a login shell
+set-option -g default-command bash
+
 set-option -g default-terminal screen-256color
 set -g visual-activity off
 
