--- a/.host/src/distro.ubuntu/.tmux.conf
+++ b/.host/src/distro.ubuntu/.tmux.conf
@@ -38,7 +38,7 @@ unbind C-b
 set -g prefix ^A
 bind a send-prefix
 
-# screen ^C c 
+# screen ^C c
 unbind ^C
 bind ^C new-window
 bind c
@@ -48,11 +48,11 @@ bind c new-window
 unbind ^D
 bind ^D detach
 
-# displays * 
+# displays *
 unbind *
 bind * list-clients
 
-# next ^@ ^N sp n 
+# next ^@ ^N sp n
 unbind ^@
 bind ^@ next-window
 unbind ^N
@@ -70,7 +70,7 @@ bind A command-prompt "rename %%"
 unbind ^A
 bind ^A last-window
 
-# prev ^H ^P p ^? 
+# prev ^H ^P p ^?
 unbind ^H
 bind ^H previous-window
 unbind ^P
@@ -80,23 +80,21 @@ bind p previous-window
 unbind BSpace
 bind BSpace previous-window
 
-# windows ^W w 
+# windows ^W w
 unbind ^W
 bind ^W list-windows
 unbind w
 bind w list-windows
 
-# quit \ 
-unbind \
-bind \ confirm-before "kill-server"
-
-# kill K k 
+# quit K
 unbind K
-bind K confirm-before "kill-window"
+bind K confirm-before "kill-server"
+
+# kill k
 unbind k
 bind k confirm-before "kill-window"
 
-# redisplay ^L l 
+# redisplay ^L l
 unbind ^L
 bind ^L refresh-client
 unbind l
