--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 ### Unbind existing tmux key bindings (except 0-9).
 
+# do not need a login shell
+set-option -g default-command bash
+
 set-option -g default-terminal screen-256color
 set -g visual-activity off
 
@@ -34,14 +37,7 @@ unbind C-b
 set -g prefix ^A
 bind a send-prefix
 
-# Bind appropriate commands similar to screen.
-# lockscreen ^X x 
-unbind ^X
-bind ^X lock-server
-unbind x
-bind x lock-server
-
-# screen ^C c 
+# screen ^C c
 unbind ^C
 bind ^C new-window
 bind c
@@ -51,11 +47,11 @@ bind c new-window
 unbind ^D
 bind ^D detach
 
-# displays * 
+# displays *
 unbind *
 bind * list-clients
 
-# next ^@ ^N sp n 
+# next ^@ ^N sp n
 unbind ^@
 bind ^@ next-window
 unbind ^N
@@ -73,7 +69,7 @@ bind A command-prompt "rename %%"
 unbind ^A
 bind ^A last-window
 
-# prev ^H ^P p ^? 
+# prev ^H ^P p ^?
 unbind ^H
 bind ^H previous-window
 unbind ^P
@@ -83,23 +79,21 @@ bind p previous-window
 unbind BSpace
 bind BSpace previous-window
 
-# windows ^W w 
+# windows ^W w
 unbind ^W
 bind ^W list-windows
 unbind w
 bind w list-windows
 
-# quit \ 
-unbind \
-bind \ confirm-before "kill-server"
-
-# kill K k 
+# quit K
 unbind K
-bind K confirm-before "kill-window"
+bind K confirm-before "kill-server"
+
+# kill k
 unbind k
 bind k confirm-before "kill-window"
 
-# redisplay ^L l 
+# redisplay ^L l
 unbind ^L
 bind ^L refresh-client
 unbind l
