--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,13 +21,18 @@ setw -g monitor-activity off
 set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
-new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
-neww -d -nhtop 'exec sudo htop' #screen 0:4
-neww -d -nirssi 'exec irssi' #screen 0:3
-neww -d -ncodez 'exec bash' #screen 0:4
-neww -d -nmail 'exec mutt' #screen 0:2
+new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:0
+neww -d     -nhtop 'exec sudo htop' #screen 0:1
+neww -d     -nirssi 'exec irssi' #screen 0:2
+neww -d     -ncodez 'exec bash' #screen 0:3
 
-set-window-option -t0:0 monitor-activity on
+# don't care about ongoing dmesg and syslog info
+set-window-option -t0:0 monitor-activity off
+set-window-option -t0:0 visual-activity off
+
+# care about IRC activity
+set-window-option -t0:2 monitor-activity on
+set-window-option -t0:2 visual-activity on
 
 #---------------------------------------------------------
 # a whole lot of crap to make tmux feel more like screen |
