Woot! Reading the manual rocks.
man tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,12 +27,13 @@ neww -d     -nirssi 'exec irssi' #screen 0:2
 neww -d     -ncodez 'exec bash' #screen 0:3
 
 # don't care about ongoing dmesg and syslog info
-set-window-option -t0:0 monitor-activity off
-set-window-option -t0:0 visual-activity off
-
+set-window-option -t0 monitor-activity off
+set-window-option -t0 visual-activity off
+ 
 # care about IRC activity
-set-window-option -t0:2 monitor-activity on
-set-window-option -t0:2 visual-activity on
+set-window-option -t:2 monitor-content 'zacsh'
+set-window-option -t0 visual-content on
+
 
 #---------------------------------------------------------
 # a whole lot of crap to make tmux feel more like screen |
