easily toggle monitoring on and off for a window
Always wanted this when running executables and find myself
annoyingly flipping back and forth to that window to check
on the completion/progress.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,6 +57,10 @@ bind ^D detach
 unbind *
 bind * list-clients
 
+# monitor a window (useful when running a script, without X11 for xmessage)
+unbind m
+bind m setw monitor-activity; setw visual-activity on
+
 # next ^@ ^N sp n
 unbind ^@
 bind ^@ next-window
