updating archlinux config (in case I ever go back); should really figure out if tmux has incremental conf overriding...

--- a/.host/src/distro.arch/.tmux.conf
+++ b/.host/src/distro.arch/.tmux.conf
@@ -1,17 +1,24 @@
+### Unbind existing tmux key bindings (except 0-9).
+
+# do not need a login shell
+set-option -g default-command bash
+
+set-option -g default-terminal screen-256color
+set -g visual-activity off
+
+set-window-option -g mode-keys vi # vi key
+set-option -g status-keys vi
+
 # Global parameters
-set                  -g status-bg black
-set                  -g status-fg cyan
-set                  -g visual-activity off
-setw                 -g aggressive-resize off
-setw                 -g monitor-activity off
-set-window-option    -g mode-keys vi # vi key
-set-window-option    -g window-status-current-attr bright
-set-window-option    -g window-status-current-bg black
-set-window-option    -g window-status-current-fg magenta
-set-option           -g set-titles off
-set-option           -g default-terminal screen-256color
-set-option           -g status-keys vi
-set-option           status-right '%k:%M #[fg=white]%m/%d'
+set -g status-bg black
+set -g status-fg cyan
+set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-fg magenta
+set-option -g set-titles off
+setw -g aggressive-resize off
+setw -g monitor-activity off
+set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
 new  -d -s0 -nsyslog 'exec tail -f -n 30 /var/log/everything.log' #screen 0:1
@@ -19,35 +26,42 @@ neww -d     -nhtop   'exec sudo htop'                             #screen 0:2
 neww -d     -nyacpi  'exec yacpi'                                 #screen 0:3
 neww -d     -ncodez  'exec bash'                                  #screen 0:4
 
-set-window-option -t0:0 monitor-activity on
+# don't care about ongoing dmesg and syslog info
+set-window-option -t0 monitor-activity off
+set-window-option -t0 visual-activity off
 
-# Keybindings (screenlike)
+# care about IRC activity
+set-window-option -t:2 monitor-content 'zacsh'
+set-window-option -t0 visual-content on
+
+
+#---------------------------------------------------------
+# a whole lot of crap to make tmux feel more like screen |
+#---------------------------------------------------------
 # Set the prefix to ^A.
 unbind C-b
 set -g prefix ^A
 bind a send-prefix
 
-# lockscreen ^X x 
-unbind ^X
-bind ^X lock-server
-unbind x
-bind x lock-server
-
-# screen ^C c 
+# screen ^C c
 unbind ^C
 bind ^C new-window
-unbind c
+bind c
 bind c new-window
 
 # detach ^D d
 unbind ^D
 bind ^D detach
 
-# displays * 
+# displays *
 unbind *
 bind * list-clients
 
-# next ^@ ^N sp n 
+# monitor a window (useful when running a script, without X11 for xmessage)
+unbind m
+bind m setw monitor-activity; setw visual-activity on
+
+# next ^@ ^N sp n
 unbind ^@
 bind ^@ next-window
 unbind ^N
@@ -59,13 +73,13 @@ bind n next-window
 
 # title A
 unbind A
-bind A command-prompt "rename-window %%"
+bind A command-prompt "rename %%"
 
 # other ^A
 unbind ^A
 bind ^A last-window
 
-# prev ^H ^P p ^? 
+# prev ^H ^P p ^?
 unbind ^H
 bind ^H previous-window
 unbind ^P
@@ -75,23 +89,21 @@ bind p previous-window
 unbind BSpace
 bind BSpace previous-window
 
-# windows ^W w 
+# windows ^W w
 unbind ^W
 bind ^W list-windows
 unbind w
 bind w list-windows
 
-# quit \ 
-unbind \
-bind \ confirm-before "kill-server"
-
-# kill K k 
+# quit K
 unbind K
-bind K confirm-before "kill-window"
+bind K confirm-before "kill-server"
+
+# kill k
 unbind k
 bind k confirm-before "kill-window"
 
-# redisplay ^L l 
+# redisplay ^L l
 unbind ^L
 bind ^L refresh-client
 unbind l
@@ -105,8 +117,3 @@ bind _ split-window -v
 unbind '"'
 bind '"' choose-window
 
-# split pane selection
-unbind Left
-bind h select-pane -L
-unbind Right
-bind l select-pane -R
