temporarily commenting out to study what's wrong with this line.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,8 +31,8 @@ set-window-option -t0 monitor-activity off
 set-window-option -t0 visual-activity off
 
 # care about IRC activity
-set-window-option -t:2 monitor-content 'zacsh'
-set-window-option -t0 visual-content on
+# set-window-option -t:2 monitor-content 'zacsh'
+# set-window-option -t0 visual-content on
 
 
 #---------------------------------------------------------
