in case i ever need to make mercurial work for me again (hopefully not).

--- a/.hgrc
+++ b/.hgrc
@@ -17,7 +17,7 @@ hgext.pager =
 hgext.highlight =
 hgext.graphlog =
 hgext.record =
-hgshelve = ~/usr/lib/python/tksoh/hgshelve.py
+hgshelve = ~/.hgext/hgshelve.py
 #inotify =
 #...requires mercurial > v1.5:
 #hgext.eol =
