Revert "correction to gitignore based on autohome/ structure."
part of larger revert of authome related things, as I'm abandoning autohome project.
This reverts commit 2e0d54fa36febe0563fc900c44d6a3c7623f2dff.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-home/.irssi/scripts/autorun/notify.pl
-home/.vim/.netrwhist
-home/.vim/.VimballRecord
-home/.vim/ruby/command-t/*.o
-home/.vim/ruby/command-t/*.so
-home/.vim/ruby/command-t/Makefile
-home/.vim/ruby/command-t/mkmf.log
-home/.w3m/w3m*
-home/.w3m/history
-home/.w3m/cookie
-home/.irssi/config
-home/.irssi/saved_colors
-home/.irssi/config
-home/.netrc
-home/cscope.inc
-home/cscope.out
-home/cscope.files
-home/.browser
-home/.irssi/config.autosave
-home/.vim/bundle/*
+.irssi/scripts/autorun/notify.pl
+.vim/.netrwhist
+.vim/.VimballRecord
+.vim/ruby/command-t/*.o
+.vim/ruby/command-t/*.so
+.vim/ruby/command-t/Makefile
+.vim/ruby/command-t/mkmf.log
+.w3m/w3m*
+.w3m/history
+.w3m/cookie
+.irssi/config
+.irssi/saved_colors
+.irssi/config
+.netrc
+cscope.inc
+cscope.out
+cscope.files
+.browser
+.irssi/config.autosave
+.vim/bundle/*
