modern, sane tmux setup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,9 @@ set-window-option -g window-status-current-fg magenta
 set-option -g set-titles off
 setw -g aggressive-resize off
 setw -g monitor-activity off
-set-option status-right '%k:%M #[fg=white]%m/%D'
+
+# TODO fix; broken at tmux v1.9a
+# set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
 new  -d -s0 -nsyslog  'exec tail -f -n 30 /var/log/dmesg /var/log/kern.log /var/log/syslog /var/log/udev /var/log/ufw.log' #screen 0:0
@@ -117,3 +119,27 @@ bind _ split-window -v
 unbind '"'
 bind '"' choose-window
 
+
+
+########################################################
+
+
+
+# per github.com/tmux-plugins/tmux-resurrect/tree/v2.4.0
+set -g @resurrect-strategy-vim 'session'
+
+
+#
+# List of plugins
+#
+# per github.com/tmux-plugins/tpm/tree/v1.2.2
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-continuum      \
+'
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
