xclipboard: force export/import from/to current tmux buffer

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,6 +120,10 @@ unbind '"'
 bind '"' choose-window
 
 
+# x11-clipboard mgmt; from wiki.archlinux.org/index.php/tmux#ICCCM_Selection_Integration
+bind C-c run 'tmux show-buffer | xsel -i -b'
+bind C-v run 'tmux set-buffer -- "$(xsel -o -b)"; tmux paste-buffer'
+
 
 ########################################################
 
