--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ setw -g monitor-activity off
 # set-option status-right '%k:%M #[fg=white]%m/%D'
 
 # Establish initial session
-new  -d -s0 -nsyslog  'exec tail -f -n 30 /var/log/dmesg /var/log/kern.log /var/log/syslog /var/log/udev /var/log/ufw.log' #screen 0:0
+new  -d -s0 -nsyslog  'exec grc tail -F -n 50 /var/log/{dmsg,syslog,udev,{ufw,kern,auth}.log}' #screen 0:0
 neww -d     -nhtop    'exec sudo htop' #screen 0:1
 neww -d     -nirssi   'exec irssi'     #screen 0:2
 neww -d     -ncodez   'exec bash'      #screen 0:3
